Changelog
=========

8.8-dev - (unreleased)
----------------------
* Bug fix: customized tiny_mce.js in order to fix Firefox missing content bug
  [ichimdav #17394]
* Change: use font icons for portal top actions. Improve
  documentation of design elements.
  [demarant refs 15235]
* Bug fix: no longer open multiple tabs when clicking on currently opened
  accordion tab
  [ichimdav refs #17631]
* Bug fix: css fix - bad style for pagination in portal_registry
  [simiamih refs #17558]
* Change: use warning triangle for error/warning portal messages
  [demarant refs #16676]
* Change: use info circle for portal messages with class info
  [ghicaale refs #16676]
* Change: removed custom css and js related to XMPP suite
  [ghicaale refs #17513]
* Bug fix: Fix PDF export CSS (hide inline comments,
  temporal coverage and location)
  [voineali]
* Change: cleanup old geo implementation
  [ghicaale refs #9155]
* Change: removed the dependecy to eea.locationwidget
  [ghicaale refs #9155]

8.7 - (2013-11-21)
------------------
* Change: harmonizing box style.
  [demarant refs #16676]

8.6 - (2013-11-21)
------------------
* Change: removed box-shadow and rounded-corners on portlets.
  Fixes double boxes in top banner overlays.
  [demarant refs #16676]
* Feature: added 'Presentation Break' TinyMCE style useful for spliting a slide
  in order to avoid overflow scrolling
  [ichimdav refs #16916]
* Change: css style for date
  [simiamih refs #16781]
* Pre-upgrade step: The upgrade step for eea.design should be the first thing
  that needs to be done as soon as the instances are restarted to avoid
  having missing or broken styles
  [ichimdav refs #15235]
* Feature: Added empty_slide_help_text property to site_properties on
  production which will be used for the empty slide help message
  [ichimdav refs #16879]
* Change: Simplified data and maps frontpage.
  [demarant fixes #16735]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on